syntax = "proto3";
package Protobuf;

message PlayerInfo{
  string uuid = 1;
  string name = 2;
  string iconUrl = 3;
  string password = 4;
}

//更新角色信息
message UpdateInfoCS{
  PlayerInfo Info = 1;
}

//更新角色信息返回
message UpdateInfoSC{
  int32 code = 1;
}

//获取角色信息
message GetPlayerInfoCS{
  string uuid = 1;
}

//获取角色信息返回
message GetPlayerInfoSC{
  PlayerInfo Info = 1;
}

//获取好友信息
message GetFriendListCS{
  string uuid = 1;
}

//获取角色信息返回
message GetFriendListSC{
  repeated string friendList = 1;
}